stderr
JudgeMan.java:14: error: cannot find symbol
                System.out.println(numberi);
                                   ^
  symbol:   variable numberi
  location: class JudgeMan
1 error
